--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -8,6 +8,7 @@
 
 .header {
   padding-bottom: 64px;
+  width: 65%;
 }
 
 .title {
@@ -24,7 +25,14 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  top: 100px;
+  left: 50%;
+  bottom: 5%;
+  margin-left: 100px;
+  min-height: 500px;
 }
 
 .controlColumn {
+  width: 50%;
 }
