--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,6 +4,7 @@
 }
 
 .maxWidthWrapper {
+  position: relative;
 }
 
 .header {
@@ -35,4 +36,13 @@
 
 .controlColumn {
   width: 50%;
+}
+
+.backgroundPane {
+  position: fixed;
+  height: 40%;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  background-color: hsl(195deg, 20%, 86%);
 }
