--- a/src/components/ControlPane/ControlPane.module.css
+++ b/src/components/ControlPane/ControlPane.module.css
@@ -4,12 +4,7 @@
   padding-top: 18px;
   background-color: white;
   border-radius: 8px;
-  /*
-    HACK: Margin on an outer bound like this is
-    a little gross, but we haven't seen the tools
-    to deal with it yet!
-  */
-  margin-bottom: 32px;
+  width: 350px;
 }
 
 .title {
@@ -23,4 +18,16 @@
   font-size: 0.875rem;
   font-weight: 400;
   color: hsl(0deg, 0%, 30%);
+}
+
+@media screen and (min-width: 768px) {
+  .controlPane {
+    /*
+      HACK: Margin on an outer bound like this is
+      a little gross, but we haven't seen the tools
+      to deal with it yet!
+    */
+    margin-bottom: 32px;
+    width: auto;
+  }
 }
